<resources>
    <string name="app_name">Exchange Rate Alerts</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="login_failure_unauthorized">Username and or password is incorrect.</string>
    <string name="login_failure_http">An issue occurred when connecting to the service.</string>
    <string name="login_failure_user_exists">User already exists.</string>
    <string name="targets_welcome_title">Welcome %1$s!</string>
    <string name="targets_recycler_item_current_value_label">Current</string>
    <string name="targets_recycler_item_target_value_label">Target</string>
    <string name="targets_recycler_item_edit_button_label">Edit target</string>
    <string name="targets_dialog_title_edit_variant">Edit target</string>
    <string name="targets_dialog_title_add_variant">Add target</string>
    <string name="targets_dialog_rate_target_edit_label">Quote target value:</string>
    <string name="targets_dialog_base_currency_edit_label">Base currency code:</string>
    <string name="targets_dialog_quote_currency_edit_label">Quote currency code:</string>
    <string name="targets_dialog_submit_button">Submit</string>
    <string name="targets_dialog_cancel_button">Cancel</string>
    <string name="targets_dialog_same_currency_error">Currency codes cannot be the same.</string>
    <string name="targets_dialog_service_issue">There was an issue when connecting to the service.</string>
    <string name="targets_refresh_failed">There was an issue when connecting to the service.</string>
    <string name="targets_delete_dialog_message">Are you sure you want to delete the %1$s to %2$s target?</string>
    <string name="targets_delete_dialog_delete_button">Delete now</string>
    <string name="targets_delete_dialog_cancel_button">Cancel</string>
    <string name="targets_delete_failed_service_issue">There was an issue when connecting to the service.</string>
    <string name="alert_notification_title">New alerts available!</string>
    <string name="alert_notification_body">Check the app now.</string>
    <string name="alert_notification_credential_failure_title">There was an error when fetching alerts.</string>
    <string name="alert_notification_credential_failure_body">Your credentials are incorrect. Check the app now.</string>
    <string name="settings_dialog_logout_question">Are you sure you want to log out?</string>
    <string name="settings_dialog_logout_submit">Logout</string>
    <string name="settings_dialog_logout_cancel">Cancel</string>
    <string name="targets_empty_recycler_text">Add your first target using the + button</string>
    <string name="login_screen_title">Exchange Rate Alerts</string>
</resources>