<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginRegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/login_screen_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorError"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/authButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onRegisterClick"
                android:text="@string/register_button"
                android:textColorLink="#673AB7" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:onClick="onLoginClick"
                android:text="@string/login_button" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>