<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/editTargetDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/targets_dialog_title_edit_variant"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/editBaseCurrencyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/targets_dialog_base_currency_edit_label" />

        <Spinner
            android:id="@+id/editBaseCurrencySpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp" />

        <TextView
            android:id="@+id/editQuoteCurrencyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/targets_dialog_quote_currency_edit_label" />

        <Spinner
            android:id="@+id/editQuoteCurrencySpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp" />

        <TextView
            android:id="@+id/editTargetRateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/targets_dialog_rate_target_edit_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/editTargetValueBeforeDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="."
                android:textSize="34sp" />

            <NumberPicker
                android:id="@+id/editTargetValueAfterDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>