<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <LinearLayout
            android:id="@+id/statusRibbon"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/baseCurrencyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="EUR" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="→"
            android:textAlignment="gravity"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quoteCurrencyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="PLN" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/currentValueRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currentValueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/targets_recycler_item_current_value_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    tools:text="4.5655 PLN" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/targetValueRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/targetValueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/targets_recycler_item_target_value_label" />

                <TextView
                    android:id="@+id/targetValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    tools:text="4.320 PLN" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/targetDeleteButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/targetEditButton"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/targets_recycler_item_edit_button_label"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>